# MundoTeam_Core

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4
contrib/: README.md  install_db4.sh
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
depends/: README.md  description.md
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  mundoteam-cli.1  mundoteam-qt.1  mundoteam-tx.1  mundoteam-wallet.1  mundoteamd.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  banman.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  clientversion.cpp  coins.h  compressor.h  core_read.cpp  flatfile.h  init.cpp  init.h  logging.cpp  logging.h  miner.cpp  miner.h  net.cpp  net.h  net_permissions.h  net_processing.cpp  net_processing.h  netaddress.cpp  netaddress.h  netbase.cpp  outputtype.cpp  pow.cpp  (+16 more)
test/: Readme.txt  config.ini
(+155 files in other folders)
